# modprg

./: .gitignore  CMakeLists.txt  README.md
core/: CMakeLists.txt  main.cpp  moduleloader.cpp  moduleloader.h  workspace.cpp  workspace.h
modules/: CMakeLists.txt
modules/gui/: CMakeLists.txt  guimodule.cpp  guimodule.h  mainwindow.cpp  mainwindow.h  mainwindowimpl.cpp  mainwindowimpl.h
modules/gui/ui/: mainwindow.ui
modules/logger/: CMakeLists.txt  logger.cpp  logger.h  loggermodule.cpp  loggermodule.h
share/: CMakeLists.txt  corelib_global.h  ilogger.h  imainwindow.h  imodule.h  interface.h
